--- a/package.json
+++ b/package.json
@@ -17,23 +17,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "^4.3.5",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.0",
     "@types/prettier": "^3.0.0",
+    "@types/supertest": "^2.0.12",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "eslint": "^8.49.0",
-    "jasmine": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "winston": "^3.10.0"
   },
   "dependencies": {
+    "@types/cors": "^2.8.14",
     "@types/db-migrate-pg": "^0.0.10",
+    "@types/jasmine": "^4.3.6",
     "@types/pg": "^8.10.2",
     "body-parser": "^1.20.2",
     "db-migrate-pg": "^1.5.0",
@@ -41,7 +52,9 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "express": "^4.18.2",
+    "jasmine": "^5.1.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "jest-test": "^1.0.2",
     "pg": "^8.5.1"
   }
 }
