--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres
+    image: postgres:15
     ports:
       - '5432:5432'
     env_file:
